# movie-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  coverage.json  pyproject.toml
.github/workflows/: hello-actions.yaml  python-cheks.yaml
catalog/: .coveragerc  .env.template  app_lifspan.py  config.default.yaml  main.py  stuff.py
catalog/api/: __init__.py  main_views.py  redirect_views.py
catalog/api/api_v1/: __init__.py
catalog/api/api_v1/auth/services/: __init__.py  redis_token_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
catalog/api/api_v1/mouvie_a/: crud.py  dependencies.py  redis.py  views.py
catalog/api/api_v1/mouvie_a/views/: __init__.py  detail_views.py  views_list.py
catalog/commands/: cli.py  hello.py  tokens.py
catalog/core/: config.py
catalog/dependencies/: movie_a.py
catalog/pages/: home.html
catalog/rest/: __init__.py  main_views.py
catalog/schemas/: movie.py
catalog/storage/movie_a/: __init__.py  crud.py
catalog/templates/: about.html  base.html  home.html
catalog/templates/components/: navbar.html
catalog/templating/: __init__.py  jinja_templates.py
catalog/testing/: conftest.py
catalog/testing/test_api/: conftest.py  test_views.py
catalog/testing/test_api/test_api_v1/: conftest.py  test_main_views.py
catalog/testing/test_api/test_api_v1/mouvie_a/: test_crud.py  test_dependencies.py
catalog/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_token_helper.py
catalog/testing/test_schemas/: test_movie.py
(+5 files in other folders)
