[project]
name = "movie-catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "redis[hiredis]>=6.4.0",
    "typer>=0.17.4",
]


[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

# mypy settings
[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

# ruff settings
[tool.ruff]
required-version = ">=0.11.5"

src = [
    "url-shortener",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations (ANN)
    "FAST",  # FastAPI (FAST)
    "I", # isort (I)
    "F", # Pyflakes (F)
    "COM", # flake8-commas (COM)
    "Q", # flake8-quotes (Q)
]
ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

